--- a/src/index.html
+++ b/src/index.html
@@ -4,30 +4,30 @@
   <meta charset="utf-8"/>
   <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.ico" />
 
-  <title>Behavior3 Editor - v[BUILD_VERSION] - http://behavior3.com</title>
+  <title>Behavior Tree Visual Editor</title>
 
   <link rel="stylesheet" href="css/preload.min.css">
   <script type="text/javascript" src="js/preload.min.js"></script>
 </head>
 
 <body ng-controller="AppController as app">
-  
+
   <!-- PRELOAD PAGE -->
   <div id="page-preload"class="preloading">
     <div class="preloading-body">
-      
+
       <span class="preloading-body-title">
-        <i class="fa fa-gear fa-spin"></i> 
+        <i class="fa fa-gear fa-spin"></i>
         <strong>Behavior3</strong> Editor
       </span>
       <span id="page-preload-progress" class="preloading-body-subtitle">
         Loading...
       </span>
-      
+
     </div>
   </div>
   <!-- END PRELOAD PAGE -->
-  
+
   <!-- APP PAGE -->
   <div class="app">
     <div ui-view class="app-anim"></div>
